<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/title"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/side_tint"
    android:backgroundTint="#EFEAEA"
    tools:context=".ui.BookingStateActivity">

    <TextView
        android:id="@+id/bookingDetailsHeading"
        android:layout_width="397dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="Booking Details"
        android:textColor="@color/black"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/PersonName"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:hint="Name"
        android:paddingRight="10dp"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookingDetailsHeading" />

    <EditText
        android:id="@+id/EmailAddress"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:hint="Email"
        android:paddingRight="10dp"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PersonName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="167dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="5dp"
        android:gravity="left"
        android:text="Customer Name :"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/PersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookingDetailsHeading" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="169dp"
        android:layout_height="21dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:gravity="left"
        android:text="Customer Email :"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/EmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PersonName" />


    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="35dp"
        android:backgroundTint="@color/main_tint"
        android:text="Proceed To Pay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="169dp"
        android:layout_height="22dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:gravity="left"
        android:text="Customer Contact :"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/Phone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddress" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="166dp"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:gravity="left"
        android:text="Number of Rooms :"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Phone" />

    <EditText
        android:id="@+id/Phone"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:hint="Phone number"
        android:inputType="phone"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddress" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/subtractFloater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/white"
        android:contentDescription=""
        android:src="@drawable/ic_subtract_icon"
        app:fabSize="mini"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/Phone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFloater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription=""
        app:fabSize="mini"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_add_icon"
        app:layout_constraintStart_toEndOf="@+id/room"
        app:layout_constraintTop_toBottomOf="@+id/Phone" />

    <Button
        android:id="@+id/startDatePickerButton"
        style="?android:spinnerStyle"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:onClick="openPicker"
        android:text="JAN 01 2022"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFloater" />

    <Button
        android:id="@+id/endDatePickerButton"
        style="?android:spinnerStyle"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:onClick="openEndDatePicker"
        android:text="JAN 01 2022"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTo" />

    <TextView
        android:id="@+id/dateTo"
        android:layout_width="139dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="55dp"
        android:gravity="center"
        android:text="To"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDatePickerButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="158dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:gravity="left"
        android:text="Select date :"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/startDatePickerButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtractFloater" />

    <TextView
        android:id="@+id/room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:text="1"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/subtractFloater"
        app:layout_constraintTop_toBottomOf="@+id/Phone" />


</androidx.constraintlayout.widget.ConstraintLayout>